fixed left margin of tab headers and spacing of platform buttons

--- a/app/assets/stylesheets/components/_result_card.scss
+++ b/app/assets/stylesheets/components/_result_card.scss
@@ -142,7 +142,7 @@
 }
 
 .streaming-logo {
-  margin: 0;
+  margin-right: 8px;
 }
 
 .result-card-title:hover {
